# ffplay-beautifully

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmdutils.c  cmdutils.cpp  cmdutils.hpp  config.h  ffplay.c  ffplay.cpp
